cli/tests/testdata/npm/invalid_package_name/main.js
import * as foo from "npm:@foo";
