cli/tests/testdata/npm/invalid_package_name/main.out
error: Not a valid package: @foo
    at [WILDCARD]/invalid_package_name/main.js:1:22
